--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -74,7 +74,7 @@
     <string name="bluetooth_devices" msgid="1063177983261608277">"‏מכשירי Bluetooth"</string>
     <string name="bluetooth_device_name" msgid="1294669733490268384">"שם המכשיר"</string>
     <string name="bluetooth_device_details" msgid="630702184344217832">"הגדרות המכשיר"</string>
-    <string name="bluetooth_profile_details" msgid="1269419918127093325">"הגדרות פרופיל"</string>
+    <string name="bluetooth_profile_details" msgid="1269419918127093325">"הגדרות הפרופיל"</string>
     <string name="bluetooth_name_not_set" msgid="4654357917928126208">"לא הוגדר שם, משתמש בשם החשבון"</string>
     <string name="bluetooth_scan_for_devices" msgid="8143654526358934069">"חיפוש מכשירים"</string>
     <string name="bluetooth_rename_device" msgid="4219655243836021443">"שינוי שם המכשיר"</string>
@@ -1353,7 +1353,7 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"פועל"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"פועל – מבוסס על זיהוי פנים"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"זיהוי פנים"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"התאמה אוטומטית של כיוון המסך כשמזיזים את הטלפון ממאוזן למאונך ולהיפך"</string>
+    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"שינוי אוטומטי של כיוון המסך כשהופכים את הטלפון ממצב של תצוגה לאורך למצב של תצוגה לרוחב"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"מידע נוסף על הסיבוב האוטומטי"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"בעת הזזת הטלפון ממצב \'לאורך\' למצב \'לרוחב\' ולהיפך"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"רזולוציית המסך"</string>
@@ -4072,7 +4072,7 @@
     <string name="notification_importance_default_title" msgid="8875198696330289686">"גבוהה"</string>
     <string name="notification_importance_high_title" msgid="394129291760607808">"הופעה במסך"</string>
     <string name="notification_block_title" msgid="7392909527700971673">"חסימה"</string>
-    <string name="notification_silence_title" msgid="4085829874452944989">"שקט"</string>
+    <string name="notification_silence_title" msgid="4085829874452944989">"שקטה"</string>
     <string name="notification_alert_title" msgid="1632401211722199217">"ברירת מחדל"</string>
     <string name="allow_interruption" msgid="5237201780159482716">"סוגי הפרעות שאפשר להפעיל"</string>
     <string name="allow_interruption_summary" msgid="9044131663518112543">"האפליקציה יכולה להפעיל צלילים ורטט ו/או להציג התראות קופצות במסך"</string>
