--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -941,12 +941,12 @@
     <string name="nfc_disabled_summary" msgid="8737797364522502351">"Utilgjengelig fordi NFC er slått av"</string>
     <string name="android_beam_label" msgid="7168565080321110094">"Android Beam"</string>
     <string name="android_beam_explained" msgid="5684416131846701256">"Når denne funksjonen er slått på, kan du beame appinnhold til en annen enhet som støtter nærfeltskommunikasjon (NFC). Du gjør dette ved å holde enhetene tett sammen. Du kan for eksempel beame nettsider, YouTube-videoer, kontakter med mer.\n\nDu holder bare enhetene mot hverandre (vanligvis rygg mot rygg) og trykker på skjermen. Appen avgjør hva som beames."</string>
-    <string name="wifi_quick_toggle_title" msgid="2737097538432862807">"Wi-Fi"</string>
+    <string name="wifi_quick_toggle_title" msgid="2737097538432862807">"Wifi"</string>
     <string name="wifi_quick_toggle_summary" msgid="4957267477820468553">"Slå på Wi-Fi"</string>
-    <string name="wifi_settings" msgid="8313301946393559700">"Wi-Fi"</string>
+    <string name="wifi_settings" msgid="8313301946393559700">"Wifi"</string>
     <string name="wifi_settings_primary_switch_title" msgid="628360786662947258">"Bruk Wi-Fi"</string>
     <string name="wifi_settings_category" msgid="3523464780563778321">"Innstillinger for Wi-Fi"</string>
-    <string name="wifi_settings_title" msgid="3879649725059512799">"Wi-Fi"</string>
+    <string name="wifi_settings_title" msgid="3879649725059512799">"Wifi"</string>
     <string name="wifi_settings_summary" msgid="784074686763572811">"Sett opp og styr trådløse aksesspunkt"</string>
     <string name="wifi_select_network" msgid="6692897876718813259">"Velg Wi-Fi-nettverk"</string>
     <string name="wifi_starting" msgid="6147022683967506341">"Slår på Wi-Fi …"</string>
@@ -1232,12 +1232,12 @@
     <skip />
     <string name="wifi_calling_roaming_mode_dialog_title" msgid="5382466713784067077">"Roaming-innstilling"</string>
   <string-array name="wifi_calling_mode_choices_v2">
-    <item msgid="6052353275413974742">"Wi-Fi"</item>
+    <item msgid="6052353275413974742">"Wifi"</item>
     <item msgid="8622872038388687383">"Mobil"</item>
     <item msgid="3027927219952052398">"Bare Wi-Fi"</item>
   </string-array>
   <string-array name="wifi_calling_mode_choices_v2_without_wifi_only">
-    <item msgid="588620799769664461">"Wi-Fi"</item>
+    <item msgid="588620799769664461">"Wifi"</item>
     <item msgid="7566603075659706590">"Mobil"</item>
   </string-array>
     <string name="wifi_calling_mode_wifi_preferred_summary" msgid="3240387177966098351">"Bruk mobilnettverk hvis Wi-Fi er utilgjengelig"</string>
@@ -1552,7 +1552,7 @@
     <string name="status_signal_strength" msgid="7644525712554444359">"Signalstyrke"</string>
     <string name="status_roaming" msgid="1253597174715663778">"Roaming"</string>
     <string name="status_operator" msgid="4335640583552058491">"Nettverk"</string>
-    <string name="status_wifi_mac_address" msgid="4447611754614388914">"MAC-adresse for Wi-Fi"</string>
+    <string name="status_wifi_mac_address" msgid="4447611754614388914">"MAC-adresse for wifi"</string>
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Enhetens Wi-Fi-MAC-adresse"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth-adresse"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serienummer"</string>
@@ -2714,7 +2714,7 @@
     <string name="battery_stats_gps_on_label" msgid="5626424078405382686">"GPS på"</string>
     <string name="battery_stats_camera_on_label" msgid="555635201416769359">"Kameraet er på"</string>
     <string name="battery_stats_flashlight_on_label" msgid="1621027969559427783">"Lommelykten er på"</string>
-    <string name="battery_stats_wifi_running_label" msgid="6461551370010379049">"Wi-Fi"</string>
+    <string name="battery_stats_wifi_running_label" msgid="6461551370010379049">"Wifi"</string>
     <string name="battery_stats_wake_lock_label" msgid="8115041205778441548">"Aktiv"</string>
     <string name="battery_stats_phone_signal_label" msgid="679649411998679555">"Mobilnettverkets signal"</string>
     <!-- no translation found for battery_stats_last_duration (3088100394725340600) -->
@@ -2831,7 +2831,7 @@
     <string name="power_screen" msgid="4596900105850963806">"Skjerm"</string>
     <string name="power_flashlight" msgid="8993388636332573202">"Lommelykt"</string>
     <string name="power_camera" msgid="4778315081581293923">"Kamera"</string>
-    <string name="power_wifi" msgid="4614007837288250325">"Wi-Fi"</string>
+    <string name="power_wifi" msgid="4614007837288250325">"Wifi"</string>
     <string name="power_bluetooth" msgid="5085900180846238196">"Bluetooth"</string>
     <string name="power_cell" msgid="7793805106954398186">"Mobilnettverk"</string>
     <string name="power_phone" msgid="2768396619208561670">"Telefonsamtaler"</string>
@@ -3212,7 +3212,7 @@
     <string name="data_usage_disable_4g_limit" msgid="3084868504051520840">"Angi datagrense for 4G"</string>
     <string name="data_usage_disable_3g_limit" msgid="8867555130268898044">"Angi datagrense for 2G/3G"</string>
     <string name="data_usage_disable_wifi_limit" msgid="7222459951785404241">"Angi datagrense for Wi-Fi"</string>
-    <string name="data_usage_tab_wifi" msgid="801667863336456787">"Wi-Fi"</string>
+    <string name="data_usage_tab_wifi" msgid="801667863336456787">"Wifi"</string>
     <string name="data_usage_tab_ethernet" msgid="2951873059375493878">"Ethernet"</string>
     <string name="data_usage_tab_mobile" msgid="952231704205870928">"Mobil"</string>
     <string name="data_usage_tab_4g" msgid="3265237821331861756">"4G"</string>
@@ -4740,7 +4740,7 @@
     <string name="wifi_data_usage" msgid="6868503699134605707">"Wi-Fi-databruk"</string>
     <string name="non_carrier_data_usage" msgid="6494603202578414755">"Databruk utenfor operatøren"</string>
     <string name="ethernet_data_usage" msgid="4552227880905679761">"Ethernet-databruk"</string>
-    <string name="wifi" msgid="2932584495223243842">"Wi-Fi"</string>
+    <string name="wifi" msgid="2932584495223243842">"Wifi"</string>
     <string name="ethernet" msgid="4665162609974492983">"Ethernet"</string>
     <string name="cell_data_template" msgid="6077963976103260821">"<xliff:g id="AMOUNT">^1</xliff:g> mobildata"</string>
     <string name="wifi_data_template" msgid="935934798340307438">"<xliff:g id="AMOUNT">^1</xliff:g> Wi-Fi-data"</string>
